// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate failed options #0 1`] = `
"ValidationError: Invalid options object. LESS Loader has been initialised using an options object that does not match the API schema.
 - options has an unknown property 'wrong'. These properties are valid:
   object { lessOptions?, sourceMap? }"
`;

exports[`validate failed options #1 1`] = `
"ValidationError: Invalid options object. LESS Loader has been initialised using an options object that does not match the API schema.
 - options has an unknown property 'lint'. These properties are valid:
   object { lessOptions?, sourceMap? }"
`;

exports[`validate failed options #2 1`] = `"TypeError: Cannot create property 'plugins' on string 'string'"`;
